--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8">
     <title>Missile Defense Calculator</title>
     <link rel="stylesheet" href="css/main.css">
-    <script src="js/index.js"></script>
   </head>
   <body>
-    <div class="main">
-      <div>
-        <h1>A moment please, Mr. President.</h1>
-      </div>
+    <div id="react-root">
     </div>
+    <script src="js/bundle.js"></script>
   </body>
 </html>
