Add google site verification so as to use tools to detect what Google search engine sees

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="LQj2m9QoDZi2UfygYQv18-TXksrPG-1Nknbega7sdfw" />
     <title>Missile Defense Calculator</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
